--- a/index.html
+++ b/index.html
@@ -189,15 +189,23 @@
           <h2 class="title is-3">Datasets</h2>
           <div class="content has-text-justified">
             <p>
-              <strong> Static Ego-Exo Dataset.</strong> 
-
-
-              <strong> Dynamic Ego-Exo Dataset.</strong> 
+              <strong> Static Ego-Exo Dataset.</strong> We introduce a novel dataset for few-view image reconstruction tasks in an autonomous driving setting. 
+              Our dataset contains 2002 single-timestep complex outdoor driving scenes, each offering six plus one outward-facing vehicle images and 100 images 
+              from exocentric viewpoints on a bounding sphere for supervision. Only a single vehicle in the scene is equipped with this setup. We define ego views 
+              to be 900 x 1600 to match the NuScenes dataset and the surround vehicle exo views to be 600 x 800.
             </p>
             <p>
-              In order to further improve the quality of the rendered images and speed up the inference, the images
-              are
-              rendered at a lower resolution and then upsampled using SwinFIR.
+              <strong> Dynamic Ego-Exo Dataset.</strong> Our temporal dataset consists of 10.5K driving trajectories well-suited for 4D forecasting, 
+              4D reconstruction, or video prediction tasks. Each trajectory is 100 steps long, corresponding to a driving length of 10 seconds. 
+              The 10.5k trajectories come from a total of 498 scenes across all towns. In each scene, the number of vehicles is set to $21$, 
+              all equipped with six plus one outward-facing vehicle camera and ten inward-facing surround vehicle exocentric images. 
+              The ego views have size 128 x 256 and the exo views are set to 98 x 128.
+            </p>
+            <p>
+              The static and the dynamic ego--exo view datasets are visualized in the Figure below. 
+              They differ mainly in image resolution and trajectory length and have complementary strengths.
+               The static ego--exo dataset contains 12k egocentric views and 200k exocentric views. 
+               The dynamic ego--exo dataset contains 6.3M egocentric views and 10.5M exocentric views.
             </p>
           </div>
         </div>
@@ -248,7 +256,7 @@
                         <td>11.748</td>
                         <td>0.533</td>
                         <td>0.743</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>Multi-view</td>
@@ -256,15 +264,7 @@
                         <td>15.366</td>
                         <td>0.677</td>
                         <td>0.540</td>
-                        <td>&times;</td>
-                    </tr>
-                    <tr>
-                        <td>Multi-view</td>
-                        <td>SplatFacto-big</td>
-                        <td>A</td>
-                        <td>B</td>
-                        <td>C</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                       <td>Multi-view</td>
@@ -272,22 +272,22 @@
                         <td>24.408</td>
                         <td>0.784</td>
                         <td>0.278</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>Monocular Depth</td>
                         <td>Metric3D</td>
-                        <td>&times;</td>
-                        <td>&times;</td>
-                        <td>&times;</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>2.214</td>
                     </tr>
                     <tr>
                         <td>Monocular Depth</td>
                         <td>ZoeDepth</td>
-                        <td>&times;</td>
-                        <td>&times;</td>
-                        <td>&times;</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>3.045</td>
                     </tr>
                     <tr>
@@ -296,7 +296,7 @@
                         <td>10.760</td>
                         <td>0.421</td>
                         <td>0.775</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>Few-view</td>
@@ -304,7 +304,7 @@
                         <td>8.788</td>
                         <td>0.450</td>
                         <td>0.793</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>Few-view</td>
@@ -312,7 +312,7 @@
                         <td>11.957</td>
                         <td>0.243</td>
                         <td>0.868</td>
-                        <td>&times;</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                       <td>Few-view</td>
@@ -351,18 +351,16 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          <h2 class="title is-3">Sensors</h2>
+          <h2 class="title is-3">Data Generator</h2>
           <div class="content has-text-justified">
             <p>
-              Suitable dataset for the task of reconstructing scenes from outward-looking cameras onboard of a
-              vehicle
-              does not exist. We fill this gap by introducing our own Inward-Outward synthetic dataset, composed of
-              1900
-              training and 100 validation scenes, each containing six outward-facing and 100
-              inward-facing cameras. The outward-facing cameras follow the NuScenes setup. The dataset is generated
-              using the <a href="https://carla.org//">CARLA
-                Simulator</a>. 3D bounding boxes for all vehicles are provided, as well as the semantic and instance
-              segmentation masks and the depth maps. The dataset is available for download <a href="todo">here</a>.
+              Both datasets contained in this paper are generated using our <strong> data generator.</strong>. 
+              The data generator provides an easy-to-use front-end for the  <a href="https://carla.org//">CARLA Simulator</a>. 
+              With our data generator, one can easily define parameters such as the town, the vehicle's initial position, 
+              the weather, the number of traffic participants, the number and kinds of sensors, and their position (both ego and exo-views).
+            </p>
+            <p>
+              Several different <strong> sensor readings</strong> are available within our dataset:
             </p>
           </div>
         </div>
@@ -421,6 +419,10 @@
           <div class="content has-text-centered">
             <h2 class="title is-3">Towns</a></h2>
           </div>
+          <p>
+            The generated data come from Towns 1 to 7 and 10HD.
+             Towns 1, 3--7, and 10HD are used for training and we left all 100 scenes from Town 2 for testing.
+          </p>
         <div class="columns is-centered has-text-justified">
           <div class="column is-four-fifths">
             <table class="styled-table">
