--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <tbody>
                     <tr>
                         <td>Multi-view</td>
-                        <td>K-Planes</td>
+                        <td>K-Planes [<a href="https://sarafridov.github.io/K-Planes/">1</a>,<a href="https://github.com/Giodiro/kplanes_nerfstudio">2</a>]</td>
                         <td>11.748</td>
                         <td>0.533</td>
                         <td>0.743</td>
@@ -260,7 +260,7 @@
                     </tr>
                     <tr>
                         <td>Multi-view</td>
-                        <td>SplatFacto</td>
+                        <td>SplatFacto [<a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3</a>,<a href="https://github.com/nerfstudio-project/gsplat">4</a>]</td>
                         <td>15.366</td>
                         <td>0.677</td>
                         <td>0.540</td>
@@ -268,15 +268,15 @@
                     </tr>
                     <tr>
                       <td>Multi-view</td>
-                        <td>NeRFacto</td>
+                        <td>NeRFacto [<a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">5</a>]</td>
                         <td>24.408</td>
                         <td>0.784</td>
                         <td>0.278</td>
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>Monocular Depth</td>
-                        <td>Metric3D</td>
+                        <td>Monocular Depth</td> 
+                        <td>Metric3D [<a href="https://jugghm.github.io/Metric3Dv2/">6</a>]</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -284,7 +284,7 @@
                     </tr>
                     <tr>
                         <td>Monocular Depth</td>
-                        <td>ZoeDepth</td>
+                        <td>ZoeDepth [<a href="https://github.com/isl-org/ZoeDepth">7</a>]</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -292,7 +292,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>K-Planes</td>
+                        <td>K-Planes [<a href="https://sarafridov.github.io/K-Planes/">1</a>,<a href="https://github.com/Giodiro/kplanes_nerfstudio">2</a>]</td>
                         <td>10.760</td>
                         <td>0.421</td>
                         <td>0.775</td>
@@ -300,7 +300,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>SplatFacto</td>
+                        <td>SplatFacto [<a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3</a>,<a href="https://github.com/nerfstudio-project/gsplat">4</a>]</td>
                         <td>8.788</td>
                         <td>0.450</td>
                         <td>0.793</td>
@@ -308,7 +308,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>NeRFacto</td>
+                        <td>NeRFacto [<a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">5</a>]</td>
                         <td>11.957</td>
                         <td>0.243</td>
                         <td>0.868</td>
@@ -316,7 +316,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>PixelNeRF</td>
+                        <td>PixelNeRF [<a href="https://alexyu.net/pixelnerf/">8</a>]</td>
                         <td>15.263</td>
                         <td>0.695</td>
                         <td>0.673</td>
@@ -324,7 +324,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>SplatterImage</td>
+                        <td>SplatterImage [<a href="https://szymanowiczs.github.io/splatter-image">9</a>]</td>
                         <td>17.819</td>
                         <td>0.570</td>
                         <td>0.585</td>
@@ -332,7 +332,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>6Img-to-3D</td>
+                        <td>6Img-to-3D [<a href="https://6img-to-3d.github.io/">10</a>]</td>
                         <td>18.864</td>
                         <td>0.733</td>
                         <td>0.453</td>
@@ -340,6 +340,12 @@
                     </tr>
                 </tbody>
             </table>
+            <p> 
+
+            </p>
+            <p>
+              We welcome submissions. Please reach out to us via <a href="mailto:marius.kaestingschaefer@continental.com?body=Hi%20Marius,&subject=SEED4D%20Benchmark%20Submission">email</a>!
+            </p>
         </div>
     </div>
 </div>
@@ -421,7 +427,7 @@
           </div>
           <p>
             The generated data come from Towns 1 to 7 and 10HD.
-             Towns 1, 3--7, and 10HD are used for training and we left all 100 scenes from Town 2 for testing.
+             Towns 1, 3 to 7, and 10HD are used for training and we left all 100 scenes from Town 2 for testing.
           </p>
         <div class="columns is-centered has-text-justified">
           <div class="column is-four-fifths">
