--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="publication-links">
                <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/coming-soon.pdf"
+                <a href="https://arxiv.org/pdf/2412.00730"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -100,7 +100,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/coming-soon"
+                <a href="https://arxiv.org/abs/2412.00730"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
