--- a/index.html
+++ b/index.html
@@ -651,13 +651,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{seed4d,
-      title={SEED4D: Few-Image Large-Scale Outdoor Driving Scene Reconstruction}, 
-      author={Marius Kästingschäfer and Théo Gieruc and Sebastian Bernhard and Dylan Campbell and Eldar Insafutdinov and Eyvaz Najafli and Thomas Brox },
+      <pre><code>@misc{kaestingschaefer2024seed4dsyntheticegoexodynamic,
+      title={SEED4D: A Synthetic Ego--Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark}, 
+      author={Marius Kästingschäfer and Théo Gieruc and Sebastian Bernhard and Dylan Campbell and Eldar Insafutdinov and Eyvaz Najafli and Thomas Brox},
       year={2024},
-      eprint={},
+      eprint={2412.00730},
       archivePrefix={arXiv},
-      primaryClass={}
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2412.00730}, 
 }</code></pre>
     </div>
   </section>
