--- a/index.html
+++ b/index.html
@@ -651,14 +651,16 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{kaestingschaefer2024seed4dsyntheticegoexodynamic,
+      <pre><code>@article{kaestingschaefer2024seed4dsyntheticegoexodynamic,
       title={SEED4D: A Synthetic Ego--Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark}, 
       author={Marius Kästingschäfer and Théo Gieruc and Sebastian Bernhard and Dylan Campbell and Eldar Insafutdinov and Eyvaz Najafli and Thomas Brox},
       year={2024},
       eprint={2412.00730},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2412.00730}, 
+      url={https://arxiv.org/abs/2412.00730},
+      journal      = {arXiv preprint},
+      volume     = {arXiv:2412.00730},
 }</code></pre>
     </div>
   </section>
