--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><a href="index.html">SEED4D</a></h1>
+            <h1 class="title is-1 publication-title">
+              <a href="index.html">SEED4D: A Synthetic Ego--Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark</a>
+            </h1>
+            <h2 class="subtitle is-3">WACV 2025</h2>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://twitter.com/marten_marius">Marius Kaestingschaefer</a><sup>1,2</sup>,</span>
