--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h2 class="title is-1 publication-title">
-              SEED4D: A Synthetic Ego--Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark
+              SEED4D: A Synthetic Ego-Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark
             </h2>
             <h2 class="subtitle is-3">WACV 2025</h2>
             <div class="is-size-5 publication-authors">
