--- a/index.html
+++ b/index.html
@@ -319,6 +319,14 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
+                        <td>MVSplat [<a href="https://github.com/donydchen/mvsplat">9</a>]</td>
+                        <td>13.86</td>
+                        <td>0.46</td>
+                        <td>0.66</td>
+                        <td>16.79</td>
+                    </tr>
+                    <tr>
+                      <td>Few-view</td>
                         <td>PixelNeRF [<a href="https://alexyu.net/pixelnerf/">8</a>]</td>
                         <td>14.500</td>
                         <td>0.550</td>
@@ -335,12 +343,29 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
+                        <td>PixelSplat [<a href="https://github.com/dcharatan/pixelsplat">9</a>]</td>
+                        <td>18.03</td>
+                        <td>0.60</td>
+                        <td>0.44</td>
+                        <td>7.26</td>
+                    </tr>
+                    <tr>
+                      <td>Few-view</td>
                         <td>6Img-to-3D [<a href="https://6img-to-3d.github.io/">10</a>]</td>
                         <td>18.682</td>
                         <td>0.726</td>
                         <td>0.451</td>
                         <td>6.232</td>
                     </tr>
+                   <tr>
+                      <td>Few-view</td>
+                        <td>sshELF [<a href="https://arxiv.org/pdf/2502.04318?">10</a>]</td>
+                        <td>18.93</td>
+                        <td>0.65</td>
+                        <td>0.50</td>
+                        <td>6.61</td>
+                    </tr>
+                  
                 </tbody>
             </table>
             <p> 
