--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                   <a href="https://github.com/continental/seed4D"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Code</span>
+                  </a>
+                </span>
+                 <!-- Poster Link. -->
+                <span class="link-block">
+                  <a href="static/images/wacv_poster.jpg"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code</span>
