--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>ArXiv</span>
                 </a>
               </span>
                 <!-- Video Link. -->
@@ -138,7 +138,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Poster</span>
                   </a>
                 </span>
                 <!-- Dataset Link. -->
@@ -148,7 +148,7 @@
                       <span class="icon">
                           <i class="far fa-images"></i>
                       </span>
-                      <span>Data</span>
+                      <span>Datasets</span>
                     </a>
                   </span>
                 </div>
