--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>SplatFacto [<a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3</a>,<a href="https://github.com/nerfstudio-project/gsplat">4</a>]</td>
+                        <td> <a href="https://docs.nerf.studio/nerfology/methods/splat.html">SplatFacto</a> </td>
                         <td>11.607</td>
                         <td>0.486</td>
                         <td>0.658</td>
