--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     </tr>
                     <tr>
                         <td>Multi-view</td>
-                        <td>K-Planes [<a href="https://sarafridov.github.io/K-Planes/">1</a>,<a href="https://github.com/Giodiro/kplanes_nerfstudio">2</a>]</td>
+                        <td> <a href="https://arxiv.org/abs/2301.10241">K-Planes</a>  </td>
                         <td>25.744</td>
                         <td>0.816</td>
                         <td>0.239</td>
