--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <tbody>
                     <tr>
                         <td>Multi-view</td>
-                        <td>SplatFacto [<a href="https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/">3</a>,<a href="https://github.com/nerfstudio-project/gsplat">4</a>]</td>
+                        <td> <a href="https://docs.nerf.studio/nerfology/methods/splat.html">SplatFacto</a>  </td>
                         <td>24.458</td>
                         <td>0.806</td>
                         <td>0.210</td>
@@ -274,7 +274,7 @@
                     </tr>
                     <tr>
                       <td>Multi-view</td>
-                        <td>NeRFacto [<a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">5</a>]</td>
+                        <td> <a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">NeRFacto</a> </td>
                         <td>24.936</td>
                         <td>0.804</td>
                         <td>0.227</td>
@@ -290,7 +290,7 @@
                     </tr>
                     <tr>
                         <td>Monocular Depth</td>
-                        <td>ZoeDepth [<a href="https://github.com/isl-org/ZoeDepth">7</a>]</td>
+                        <td> <a href="https://github.com/isl-org/ZoeDepth">ZoeDepth</a> </td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -298,7 +298,7 @@
                     </tr>
                     <tr>
                         <td>Monocular Depth</td> 
-                        <td>Metric3D [<a href="https://jugghm.github.io/Metric3Dv2/">6</a>]</td>
+                        <td> <a href="https://jugghm.github.io/Metric3Dv2/">Metric3D</a> </td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -306,7 +306,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>K-Planes [<a href="https://sarafridov.github.io/K-Planes/">1</a>,<a href="https://github.com/Giodiro/kplanes_nerfstudio">2</a>]</td>
+                        <td> <a href="https://arxiv.org/abs/2301.10241">K-Planes</a> </td>
                         <td>11.356</td>
                         <td>0.463</td>
                         <td>0.633</td>
@@ -322,7 +322,7 @@
                     </tr>
                     <tr>
                         <td>Few-view</td>
-                        <td>NeRFacto [<a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">5</a>]</td>
+                        <td> <a href="https://docs.nerf.studio/nerfology/methods/nerfacto.html">NeRFacto</a> </td>
                         <td>10.943</td>
                         <td>0.298</td>
                         <td>0.791</td>
@@ -330,7 +330,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>MVSplat [<a href="https://github.com/donydchen/mvsplat">9</a>]</td>
+                        <td> <a href="https://github.com/donydchen/mvsplat">MVSplat</a> </td>
                         <td>13.86</td>
                         <td>0.46</td>
                         <td>0.66</td>
@@ -338,7 +338,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>PixelNeRF [<a href="https://alexyu.net/pixelnerf/">8</a>]</td>
+                        <td> <a href="https://alexyu.net/pixelnerf/">PixelNeRF</a> </td>
                         <td>14.500</td>
                         <td>0.550</td>
                         <td>0.652</td>
@@ -346,7 +346,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>SplatterImage [<a href="https://szymanowiczs.github.io/splatter-image">9</a>]</td>
+                        <td> <a href="https://szymanowiczs.github.io/splatter-image">SplatterImage</a> </td>
                         <td>17.791</td>
                         <td>0.580</td>
                         <td>0.568</td>
@@ -354,7 +354,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>PixelSplat [<a href="https://github.com/dcharatan/pixelsplat">9</a>]</td>
+                        <td> <a href="https://github.com/dcharatan/pixelsplat">PixelSplat</a> </td>
                         <td>18.03</td>
                         <td>0.60</td>
                         <td>0.44</td>
@@ -362,7 +362,7 @@
                     </tr>
                     <tr>
                       <td>Few-view</td>
-                        <td>6Img-to-3D [<a href="https://6img-to-3d.github.io/">10</a>]</td>
+                        <td> <a href="https://6img-to-3d.github.io/">6Img-to-3D</a> </td>
                         <td>18.682</td>
                         <td>0.726</td>
                         <td>0.451</td>
@@ -370,7 +370,7 @@
                     </tr>
                    <tr>
                       <td>Few-view</td>
-                        <td>sshELF [<a href="https://arxiv.org/pdf/2502.04318?">10</a>]</td>
+                        <td> <a href="https://arxiv.org/pdf/2502.04318?">sshELF</a> </td>
                         <td>18.93</td>
                         <td>0.65</td>
                         <td>0.50</td>
