--- a/index.html
+++ b/index.html
@@ -721,16 +721,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{kaestingschaefer2024seed4dsyntheticegoexodynamic,
-      title={SEED4D: A Synthetic Ego--Exo Dynamic 4D Data Generator, Driving Dataset and Benchmark}, 
-      author={Marius Kästingschäfer and Théo Gieruc and Sebastian Bernhard and Dylan Campbell and Eldar Insafutdinov and Eyvaz Najafli and Thomas Brox},
-      year={2024},
-      eprint={2412.00730},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2412.00730},
-      journal      = {arXiv preprint},
-      volume     = {arXiv:2412.00730},
+      <pre><code>@InProceedings{Kastingschafer_2025_WACV,
+    author    = {K\"astingsch\"afer, Marius and Gieruc, Th\'eo and Bernhard, Sebastian and Campbell, Dylan and Insafutdinov, Eldar and Najafli, Eyvaz and Brox, Thomas},
+    title     = {SEED4D: A Synthetic Ego-Exo Dynamic 4D Data Generator Driving Dataset and Benchmark},
+    booktitle = {Proceedings of the Winter Conference on Applications of Computer Vision (WACV)},
+    month     = {February},
+    year      = {2025},
+    pages     = {7741-7753}
 }</code></pre>
     </div>
   </section>
