--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </span>
                 <!-- Dataset Link. -->
                   <span class="link-block">
-                    <a href="https://www.continental-automotive.com/en/microsites/datai/seed4d/download.html"
+                    <a href="#datasets"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                           <i class="far fa-images"></i>
@@ -687,11 +687,11 @@
       </div>
   </section>
 
-  <section class="section">
+  <section class="section" id="datasets">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          <h2 class="title is-3">Links</h2>
+          <h2 class="title is-3">Dataset Download</h2>
           <div class="content has-text-justified">
             <div>
               <strong>Static Data</strong>
