allow direct download via updated links

--- a/index.html
+++ b/index.html
@@ -697,56 +697,56 @@
               <strong>Static Data</strong>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town01.tar.xz/">Static Town01</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town01.tar.xz">Static Town01</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town02.tar.xz/">Static Town02</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town02.tar.xz">Static Town02</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town03.tar.xz/">Static Town03</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town03.tar.xz">Static Town03</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town04.tar.xz/">Static Town04</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town04.tar.xz">Static Town04</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town05.tar.xz/">Static Town05</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town05.tar.xz">Static Town05</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town06.tar.xz/">Static Town06</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town06.tar.xz">Static Town06</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town07.tar.xz/">Static Town07</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town07.tar.xz">Static Town07</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town10HD.tar.xz/">Static Town10HD</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/static_Town10HD.tar.xz">Static Town10HD</a>
             </div>
             
             <div style="margin-top: 20px;">
               <strong>Dynamic Data</strong>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town01.tar.xz/">Dynamic Town01</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town01.tar.xz">Dynamic Town01</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town02.tar.xz/">Dynamic Town02</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town02.tar.xz">Dynamic Town02</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town03.tar.xz/">Dynamic Town03</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town03.tar.xz">Dynamic Town03</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town04.tar.xz/">Dynamic Town04</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town04.tar.xz">Dynamic Town04</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town05.tar.xz/">Dynamic Town05</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town05.tar.xz">Dynamic Town05</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town06.tar.xz/">Dynamic Town06</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town06.tar.xz">Dynamic Town06</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town07.tar.xz/">Dynamic Town07</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town07.tar.xz">Dynamic Town07</a>
             </div>
             <div>
-              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town10HD.tar.xz/">Dynamic Town10HD</a>
+              <a href="https://seed4d-dataset.s3.eu-central-1.amazonaws.com/dynamic_Town10HD.tar.xz">Dynamic Town10HD</a>
             </div>
           </div>
         </div>
